[#429] Fix the overflow hidden in assessment.scss

--- a/frontend/src/pages/procurement-library/assessment/assessment.scss
+++ b/frontend/src/pages/procurement-library/assessment/assessment.scss
@@ -2,9 +2,9 @@
 
 :root,
 #root {
-  body {
-    overflow: hidden !important;
-  }
+  // body {
+  //   overflow: hidden !important;
+  // }
   h3 {
     font-family: "RocGrotesk" !important;
   }
